--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validator",
+  "name": "@fengyuanchen/validator",
   "description": "A simple jQuery validation plugin.",
   "version": "0.0.1",
   "main": "dist/validator.js",
