--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@fengyuanchen/validator",
-  "description": "A simple jQuery validation plugin.",
-  "version": "0.0.1",
+  "description": "A simple jQuery form validation plugin.",
+  "version": "0.1.0",
   "main": "dist/validator.js",
+  "license": "MIT",
+  "repository": "fengyuanchen/validator",
+  "homepage": "https://fengyuanchen.github.io/validator",
+  "author": {
+    "name": "Fengyuan Chen",
+    "url": "http://chenfengyuan.com"
+  },
   "keywords": [
+    "form",
     "validation",
     "jquery",
     "plugin",
@@ -14,37 +22,20 @@
     "web",
     "development"
   ],
-  "author": {
-    "name": "Fengyuan Chen",
-    "url": "https://github.com/fengyuanchen"
-  },
-  "homepage": "https://github.com/fengyuanchen/validator",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fengyuanchen/validator.git"
-  },
-  "bugs": {
-    "url": "https://github.com/fengyuanchen/validator/issues"
-  },
-  "license": "MIT",
   "dependencies": {
-    "jquery": ">= 1.9.0"
+    "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-uglify": "~0.7.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-qunit": "~0.5.2",
-    "grunt-html-validation": "~0.1.18",
-    "grunt-replace": "~0.8.0",
-    "grunt-newer": "~1.1.0",
-    "grunt-jscs": "~1.2.0",
-    "load-grunt-tasks": "~3.1.0"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-htmlcomb": "0.1.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^1.12.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-qunit": "^1.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^1.5.1"
   }
 }
